fix: #1218 fixed overflow style

--- a/mw-webapp/src/component/sidebar/Sidebar.module.scss
+++ b/mw-webapp/src/component/sidebar/Sidebar.module.scss
@@ -40,5 +40,5 @@ $paddingSidebar: $paddingExtraMedium 40px;
   justify-content: space-between;
   padding: $paddingSidebar;
   background-color: var(--quaternaryBgColor);
-  overflow: auto;
+  overflow-y: auto;
 }
